--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 html {
+  width: 100%;
   height: 100%;
+  background-color: #000;
+  color: #fff;
 }
 body {
+  width: 100%;
   height: 100%;
 }
 .font-freeman {
@@ -11,5 +15,6 @@ body {
 }
 
 #root {
+  width: 100%;
   height: 100%;
 }
